Attempt to fix stylesheet on firefox

--- a/style.css
+++ b/style.css
@@ -14,10 +14,6 @@
 	font-size: large;
 }
 
-/*video {
-	width: 900px;
-}*/
-
 p {
 	margin-top: 0;
 	margin-bottom: 0;
